--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,7 @@ spring.data.mongodb:
   host: ${MONGO_HOST:localhost}
   port: ${MONGO_PORT:27017}
   user: ${MONGO_USER:}
-  secret: ${MONGO_PASSWORD:}
+  password: ${MONGO_PASSWORD:}
+  database: ${MONGO_NAME:test}
+#  authentication-database: ${MONGO_AUTH:admin}
+#  uri: mongodb://${MONGO_USER:}:${MONGO_PASSWORD:}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}/${MONGO_NAME:test}
