--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,10 @@ spring.security.user:
   password: ${BASIC_AUTH_SECURITY_PASSWORD:davide}
 
 spring.data.mongodb:
-  host: ${MONGO_HOST:localhost}
-  port: ${MONGO_PORT:27017}
-  user: ${MONGO_USER:}
-  password: ${MONGO_PASSWORD:}
-  database: ${MONGO_NAME:test}
+#  host: ${MONGO_HOST:localhost}
+#  port: ${MONGO_PORT:27017}
+#  user: ${MONGO_USER:}
+#  password: ${MONGO_PASSWORD:}
+#  database: ${MONGO_NAME:test}
 #  authentication-database: ${MONGO_AUTH:admin}
-#  uri: mongodb://${MONGO_USER:}:${MONGO_PASSWORD:}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}/${MONGO_NAME:test}
+  uri: mongodb://${MONGO_USER:}:${MONGO_PASSWORD:}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}/${MONGO_NAME:test}
